@@ -538,3 +538,7 @@ extern int init_main(int argc, char **argv)
 	sleep(1);
     }
 }
+
+#if defined FOO
+    #error Ack!
+#endif
